--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -32,6 +32,39 @@
     .page__share {
       @include full();
     }
+
+    header {
+
+      .page__buttons {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        max-width: 90%;
+        margin: auto;
+
+        .btn {
+          font-size: .875em;
+          margin: 2.5px;
+
+          i {
+            margin-right: 0.5em;
+          }
+        }
+
+        [data-bs-toggle=collapse][aria-expanded=true] {
+          display: none;
+        }
+
+        .collapse.show {
+          display: contents;
+        }
+
+        .collapsing {
+          display: contents;
+          transition: none;
+        }
+      }
+    }
   }
 }
 
@@ -69,6 +102,11 @@
 .page__lead {
   font-family: $global-font-family;
   font-size: $type-size-4;
+}
+
+.page__teaser {
+  text-align: center;
+  margin-top: 3em;
 }
 
 .page__content {
