--- a/_includes/archive-single-publication.html
+++ b/_includes/archive-single-publication.html
@@ -54,10 +54,11 @@
 
     <div class="col-12 col-md-8">
     <b class="archive__item-title" itemprop="headline">
+      {% assign permalink = post.url | prepend: base_path %}
       {% if post.link %}
-        <a href="{{ post.link }}">{{ title }}.</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
+        <a href="{{ post.link }}">{{ title }}.</a> <a href="{{ permalink }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
       {% else %}
-        <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}.</a>
+        <a href="{{ permalink }}" rel="permalink">{{ title }}.</a>
       {% endif %}
     </b>
 
@@ -87,13 +88,6 @@
      -->
     <p class="archive__item-excerpt" itemprop="description"></p>
     <div id="collapse/parent/{{post.id}}">
-    {% if post.abstract %}
-      <button class="btn btn-outline-secondary btn-sm" type="button" data-bs-toggle="collapse"
-        data-bs-target="#collapse/abstract/{{post.id}}" 
-        aria-expanded="false" aria-controls="collapse/abstract/{{post.id}}">
-        Abstract
-      </button>
-    {% endif %}
     {% if post.paperurl %}
       <a href=" {{ post.paperurl }} " class="btn btn-outline-secondary btn-sm text-decoration-none"><i class="bi bi-unlock-fill text-success"></i> PDF</a>
     {% elsif post.doi or post.arxiv %}
@@ -107,18 +101,8 @@
     {% if post.codeurl %}
       <a href="{{ post.codeurl }}" class="btn btn-outline-secondary btn-sm text-decoration-none"><i class="bi bi-github"></i> Code</a>
     {% endif %}
-    {% if post.website %}
-      <a href="{{ post.website }}" rel="permalink" class="btn btn-outline-secondary btn-sm text-decoration-none"><i class="bi bi-globe2"></i> Project page</a>
-    {% endif %}
-    {% if post.abstract %}
-      <div class="collapse" id="collapse/abstract/{{post.id}}" data-bs-parent="#collapse/parent/{{post.id}}">
-        <div class="card card-body">
-          <small>
-            {{ post.abstract | markdownify }}
-          </small>
-        </div>
-      </div>
-    {% endif %}
+    {% assign project_page = post.website | default: post.link | default: permalink %}
+    <a href="{{ project_page }}" rel="permalink" class="btn btn-outline-secondary btn-sm text-decoration-none"><i class="bi bi-globe2"></i> Project page</a>
     </div>
   </div>
   </div>
