Fix semantic web schema

--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -121,7 +121,7 @@
       "@context": "http://schema.org",
       "@type": "Organization",
       "url": {{ seo_url | jsonify }},
-      "logo": {{ seo_logo | jsonify }},
+      "logo": {{ seo_logo | jsonify }}
     }
   </script>
 {% endif %}
