Fix last commit

--- a/_includes/author-profile-small.html
+++ b/_includes/author-profile-small.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class="row d-lg-none justify-content-center">
     <div class="col-12 m-2" style="max-width: 175px;">
         {% if author.avatar contains "://" %}
             {% capture avatar %}{{ author.avatar }}{% endcapture %}
