Fix BibTeX generation

--- a/_includes/archive-single-publication.html
+++ b/_includes/archive-single-publication.html
@@ -15,9 +15,9 @@
 {% endif %}
 
 {% if post.id %}
-  {% assign title = post.title | markdownify | remove: "<p>" | remove: "</p>"  | strip %}
+  {% assign title = post.title | remove: "{" | remove: "}" | markdownify | remove: "<p>" | remove: "</p>"  | strip %}
 {% else %}
-  {% assign title = post.title | strip %}
+  {% assign title = post.title | remove: "{" | remove: "}" | strip %}
 {% endif %}
 
 <div class="{{ include.type | default: "list" }}__item">
