--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -18,7 +18,8 @@ layout: default
   {% include sidebar.html %}
 
   <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
-    {% if page.title %}<meta itemprop="headline" content="{{ page.title | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
+    {% if page.title %}{% assign page_title = page.title | remove: "{" | remove: "}" %}{% endif %}
+    {% if page_title %}<meta itemprop="headline" content="{{ page_title | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
     {% if page.abstract %}<meta itemprop="description" content="{{ page.abstract | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
     {% if page.excerpt %}<meta itemprop="description" content="{{ page.excerpt | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
     {% if page.date %}<meta itemprop="datePublished" content="{{ page.date | date: "%B %d, %Y" }}">{% endif %}
@@ -28,7 +29,7 @@ layout: default
     <div class="page__inner-wrap">
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
-          {% if page.title %}<h1 class="page__title text-center mb-4" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
+          {% if page_title %}<h1 class="page__title text-center mb-4" itemprop="headline">{{ page_title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
           {% if page.read_time %}
             <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
           {% endif %}
@@ -101,7 +102,7 @@ layout: default
             {% if teaser_type contains "image/" %}
               <img src="{{ teaser }}"
               style="background: {{ teaser_background | default: 'default' }};"
-              alt="Teaser for {{ post.title }}">
+              alt="Teaser for {{ page_title }}">
             {% elsif teaser_type contains "video/" %}
               <video width="100%" autoplay="" loop="" muted="" controls="">
                 <source src="{{ teaser }}" type="{{ teaser_type }}">
