--- a/_includes/date.html
+++ b/_includes/date.html
@@ -5,7 +5,7 @@
     {%- else -%}
         {%- assign to=include.from -%}
     {%- endif -%}
-{%- else if include.to -%}
+{%- elsif include.to -%}
     {%- assign from=include.to -%}
     {%- assign to=include.to -%}
 {%- endif -%}
