--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,36 @@
 <script src="{{ base_path }}/assets/js/main.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+<script>
+const dateTagId = "date_last_modified";
+var xhttp = new XMLHttpRequest();
+xhttp.onreadystatechange = function()
+{
+  if (this.readyState == 4 && this.status == 200)
+  {
+    let commits = JSON.parse(this.responseText);
+    var commit_date = commits[0].commit.committer.date;
+    var lastUpdated = new Date(commit_date);
+    const options = {
+      year: 'numeric',
+      month: 'long',
+      day: 'numeric',
+    };
+    var dateString = lastUpdated.toLocaleDateString("en-US", options);
+    $(`#${dateTagId}`).text(`Last updated: ${dateString}`);
+  }
+};
+var element =  document.getElementById(dateTagId);
+if (typeof(element) != 'undefined' && element != null)
+{
+  var path = "{{page.path}}";
+  if (element.hasAttribute('data-path')) {
+    path = element.getAttribute('data-path');
+  }
+  xhttp.open("GET", `https://api.github.com/repos/{{site.repository}}/commits?path=${path}&page=1&per_page=1`, true);
+  xhttp.send();
+}
+</script>
+
 {% include analytics.html %}
 {% include /comments-providers/scripts.html %}
