Adjust research career page design

--- a/_includes/research-secondments.html
+++ b/_includes/research-secondments.html
@@ -8,7 +8,7 @@
 
 {%- for secondment in secondments -%}
     <div class="col py-2 row">
-    <div class="col-4 pt-1"><img src="{{ secondment.image }}" alt=""></div>
+    <div class="col-4"><img src="{{ secondment.image }}" alt=""></div>
     <div class="col-8">
         <h5>{{ secondment.company }}</h5>
         {{ secondment.location }}<br>
